[gd_scene load_steps=2 format=3 uid="uid://d2hnxmfqj10ek"]

[ext_resource type="Script" uid="uid://vrcty8gur5i2" path="res://Custom_light.gd" id="1_p3lox"]

[node name="CustomLight" type="Node3D"]
script = ExtResource("1_p3lox")

[node name="ShadowMapViewport" type="SubViewport" parent="."]
vrs_update_mode = 2
size = Vector2i(1024, 1024)
render_target_update_mode = 0

[node name="ShadowCamera" type="Camera3D" parent="ShadowMapViewport"]
